# aurorae

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md
ai-assistant-chats/: CRTP_Mixin_style_asset_traits.md  app_context_and_service_locator_pattern.md  asset_system_and_render_objects_roadmap.md  base_vulkan_resource_class_via_CRTP_and_Concepts_for_contract_and_boilerplate_reduction.md  blocking_async_and_parallel_schemes_to_upload_buffers.md  command_buffer_resetability.md  cpp_moving_object_with_const_members.md  debug_names_for_vulkan_objects_and_labelling_command_buffer_regions.md  introducing_push_constants.md  job_system_via_stdexec.md  meshAsset_rendererMesh_subMesh_design.md  more_on_registry_and_build_mode_variants.md  on_asset_processing_and_dependency_order.md  on_blending_options_in_materials.md  on_drawSpan_design.md  on_how_to_use_optional-and_then-else_or-transform-value_or_optional_vs_empty_containers.md  on_material_parameter_serde_design.md  on_parallel_builds_and_pch.md  on_shader_assets_and_unique_asset_id_generation.md  on_the_timing_of_pipeline_creation-material_asset-json_schema.md  preparing_vertex_and_index_buffers.md  storing_and_serializing_material_uniform_paramaters.md  vulkan_opengl_coordinate_systems_view_projection_matrices.md
dependencies/: AuroraeDependenciesConfig.cmake.in  AuroraeDependenciesTargets.cmake.in  CMakeLists.txt  dummy.cpp
src/: .clang-format  .clang-tidy  .gitignore  Allocator.cpp  Allocator.h  AppContext.cpp  AppContext.h  Application.cpp  Application.h  Aurorae.natvis  Buffer.cpp  Buffer.h  CMakeLists.txt  CMakePresets.json  CONTEXT.md  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  FileIO.cpp  FileIO.h  GlfwUtils.cpp  GlfwUtils.h  Handle.cpp  Handle.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Pipelines.cpp  Pipelines.h  Renderer.cpp  Renderer.h  Swapchain.cpp  (+13 more)
src/Resources/: Allocator.cpp  Allocator.h  Buffer.cpp  Buffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  PipelineCache.cpp  PipelineCache.h  PipelineLayout.cpp  PipelineLayout.h  ShaderModule.cpp  ShaderModule.h  VulkanResource.cpp  VulkanResource.h
src/asset/: AssetConcepts.h  AssetGraphicsProgram.cpp  AssetIds.cpp  AssetIds.h  AssetManager.cpp  AssetManager.h  AssetMaterial.cpp  AssetMesh.cpp  AssetProcessor.cpp  AssetProcessor.h  AssetRegistry.cpp  AssetRegistry.h  AssetTraits.h  AssimpUtils.cpp  AssimpUtils.h  Common.h  GraphicsProgram.cpp  GraphicsProgram.h  Handle.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderReflection.cpp  ShaderReflection.h  ShaderStage.cpp  ShaderStage.h
src/assets/materials/: debug.mat  material.schema.json  phong.mat  unlit.mat  unlit_solid.mat
src/assets/shaders/: compile_all_shaders.bat  compile_shader.bat  cube.frag  cube.vert  cube2.frag  cube2.vert  cube3.frag  debug.frag  debug.shader  debug.vert  default.vert  graphics_program.schema.json  phong.frag  phong.shader  triangle.frag  triangle.vert  triangle2.frag  triangle2.vert  ubo_study.frag  ubo_study.shader  unlit.frag  unlit.shader  unlit.vert  unlit2.shader  unlit_solid.frag  unlit_solid.shader
src/render/: GraphicsProgram.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderConcepts.h  RenderGraphicsProgram.cpp  RenderMaterial.cpp  RenderMesh.cpp  Shader.cpp  Shader.h
src/src/: Handle.cpp
superbuild/: CMakeLists.txt  cmake_build.bat  cmake_configure.bat  copy_pdb.cmake
testbed/: CMakeLists.txt  glaze_study.cpp  glaze_study_01.cpp  glaze_study_02.cpp  glaze_study_03.cpp  glaze_study_04.cpp
